# cpp_Static_Development_Bench

./: .gitignore  CMakeLists.txt  README.md  build.bat  config.cmake
header/: mainwindow.h  template.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui
static/: CMakeLists.txt  README.md  build.bat  config.cmake
static/src/: template.cpp
